# minimal_driver

./: CMakeLists.txt  minimal_driver.xml  package.xml
config/: minimal_controllers.yaml  twist_mux_params.yaml
include/minimal_driver/: diffbot_system.hpp
launch/: camera_init.launch.py  robot_behavior_init.launch.py  robot_init.launch.py  start_all.launch.py
src/: diffbot_system.cpp
urdf/: diffbot.ros2_control.xacro  robot.urdf.xacro  robot_core.xacro
